# simple-resume

./: .bandit  .gitignore  .markdown-link-check.json  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PACKAGING.md  PLAN.md  README.md  action_plan.txt  bandit-report.json  coverage.json  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: code-quality.yml  lint.yml  pre-commit.yml  publish-packages.yml  test.yml  typecheck.yml  wiki-sync.yml
docs/: MARKDOWN_GUIDE.md  WORKFLOWS.md
sample/input/: sample_1.yaml  sample_2.yaml  sample_contrast_demo.yaml  sample_dark_sidebar.yaml  sample_latex.yaml  sample_multipage_demo.yaml  sample_palette_demo.yaml  sample_palette_demo_random.yaml
src/cv/: __init__.py  config.py  generate_pdf.py  index.py  utilities.py
src/cv/templates/: cover.html  cv_base.html  cv_no_bars.html  cv_with_bars.html
src/easyresume/: __init__.py  config.py  generate_html.py  generate_pdf.py  rendering.py  utilities.py
src/easyresume/static/css/: README.md  common.css  preview.css  print.css
src/easyresume/templates/: cover.html  cv_base.html  cv_no_bars.html  cv_with_bars.html  resume_base.html  resume_no_bars.html  resume_with_bars.html
src/simple_resume/: __init__.py  cli.py  cli_random_palette_demo.py  config.py  constants.py  dependencies.py  exceptions.py  generation.py  hydration.py  latex_renderer.py  rendering.py  result.py  session.py  utilities.py  validation.py
src/simple_resume/api/: __init__.py  colors.py
src/simple_resume/cli/: __init__.py  main.py  palette.py  random_palette_demo.py
src/simple_resume/constants/: __init__.py  colors.py
src/simple_resume/core/: __init__.py  color_service.py  color_utils.py  colors.py  config_core.py  generation_plan.py  html_generation.py  hydration_core.py  io_utils.py  models.py  pdf_generation.py  plan.py  rendering_coordinator.py  resume.py
src/simple_resume/generate/: __init__.py  core.py  lazy.py
src/simple_resume/internal/: __init__.py
src/simple_resume/palettes/: __init__.py  cli.py  common.py  generators.py  registry.py  sources.py
src/simple_resume/session/: __init__.py  config.py  session.py
src/simple_resume/shell/: __init__.py  generation.py  rendering_operations.py  strategies.py
src/simple_resume/static/css/: README.md  common.css  preview.css  print.css
src/simple_resume/templates/: resume_base.html
src/simple_resume/templates/latex/: basic.tex
src/simple_resume/utils/: __init__.py  colors.py  io.py  lazy_import.py
tests/: __init__.py  bdd.py  conftest.py
tests/architecture/: __init__.py  test_layer_separation.py
tests/integration/: test_business_logic.py  test_cli_editable_install.py  test_cli_palette_files.py  test_cv_workflow.py  test_palette_processing.py  test_resume_workflow.py
tests/unit/: test_api.py  test_api_colors.py  test_api_surface.py  test_bdd_helper.py  test_cli.py  test_cli_random_palette_demo.py  test_color_service.py  test_core_resume.py  test_generate_html.py  test_generate_pdf.py  test_generation.py  test_hydration.py  test_index.py  test_latex_renderer.py  test_lazy_import.py  test_palette_cli.py  test_palette_files.py  test_palette_generators.py  test_palette_registry.py  test_palette_remote.py  test_palette_sources.py  test_palettes_common.py  test_rendering.py  test_result.py  test_session.py  test_shell_generation.py  test_shell_rendering_operations.py  test_template_resolution_fix.py  test_template_structure.py  test_utilities.py  test_validation.py
tests/unit/core/: test_config_core.py  test_generation_plan.py  test_hydration_core.py  test_plan.py
wiki/: ARCHITECTURE.md  Color-Schemes.md  Contributing.md  Development-Guide.md  Getting-Started.md  Lazy-Loading-Guide.md  Markdown-Guide.md  Migration-Guide-Generate-Module.md  Migration-Guide-Modernization.md  Migration-Guide.md  PDF-Renderer-Evaluation.md  Path-Handling-Guide.md  Technical-Debt-Resolution.md  Usage-Guide.md  Workflows.md
wiki/architecture/: 001-fix-sidebar-pagination.md  002-functional-core-shell.md  003-api-surface-design.md  ADR001-fix-sidebar-pagination.md  ADR002-functional-core-imperative-shell.md  ADR003-api-surface-design.md  ADR004-template-system-architecture.md  ADR005-configuration-management.md  ADR006-error-handling-strategy.md  ADR007-color-palette-system.md  ADR008-constants-consolidation.md  Functional-Core-Shell-Inventory.md  functional-core-shell-inventory.md
