[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/cv",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85"
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interaction",
    "business: Business logic and user story tests",
    "slow: Tests that take longer to run",
    "network: Tests that require network access",
    "tdd: Test-driven development tests"
]

[project]
name = "cv"
version = "2.0.1"
description = "Programatically create CVs"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
maintainers = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/athola/cv"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "markdown>=3.7.0",
    "oyaml>=1.0",
    "weasyprint>=66.0",
]

[project.optional-dependencies]
utils = [
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "ty>=0.0.1a23",
    "pytype>=2024.10.11",
    "types-markdown>=3.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
generate-pdf = "cv.generate_pdf:main"
run-server = "cv.index:run_app"

[tool.hatch.build.targets.wheel]
packages = ["src/cv"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".uv-cache", "src/cv/static", "src/cv/templates"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "PL",   # All Pylint rules (complete coverage)
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "PERF", # Performance rules
    "PT",   # flake8-pytest-style
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
]
extend-ignore = [
    "E203",    # whitespace before ':' (conflicts with black/ruff format)
    "PLR2004", # magic-value-comparison
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLW0603", # global-statement
    "D100",    # missing-module-docstring (equivalent to pylint C0114)
    "D101",    # missing-class-docstring (equivalent to pylint C0115)
    "D102",    # missing-function-docstring (equivalent to pylint C0116)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = [
    "C901",
    "E501",
    "PERF203",
    "PERF401",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR2004",
    "PLW0603",
    "PT009",
    "PT011",
    "PT012",
    "PT017",
    "PT019",
    "RUF001",
    "RUF002",
    "RUF003",
    "SIM102",
    "SIM108",
    "SIM115",
    "SIM117",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
mypy_path = "./src"
explicit_package_bases = true
namespace_packages = true
exclude = ['^\.venv', '^\.uv-cache']

[[tool.mypy.overrides]]
module = "oyaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weasyprint"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask"
ignore_missing_imports = true
